--- a/Proyecto numero 1/templates/inicio-sesion.html
+++ b/Proyecto numero 1/templates/inicio-sesion.html
@@ -45,9 +45,9 @@
 <footer>
     <div class="footer-content">
         <div class="social-icons">
-            <a href="#"><img src="./static/img/instagram.png" alt="Instagram">@MundoLibro</a><br>
-            <a href="#"><img src="./static/img/facebook.png" alt="Facebook">MundoLibro</a><br>
-            <a href="#"><img src="./static/img/twitter.png" alt="Twitter">MundoLibro</a>
+            <a href="#"><img src="../static/img/instagram.png" alt="Instagram">@MundoLibro</a><br>
+            <a href="#"><img src="../static/img/facebook.png" alt="Facebook">MundoLibro</a><br>
+            <a href="#"><img src="../static/img/twitter.png" alt="Twitter">MundoLibro</a>
         </div>
         <div class="footer-links" type="button" id="term-cond">
             <a href="#" id="terminosCondiciones">Términos y condiciones</a>
